<resources>
    <string name="app_name">Simple Inventory</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="button_login">Login or Register</string>
    <string name="login_registering">Registering...</string>
    <string name="login_error">Login failed</string>
    <string name="login_error_empty">Login failed: email or password not specified</string>
    <string name="title_categories">Categories</string>
    <string name="title_items">Items</string>
    <string name="new_category">New Category</string>
    <string name="search_categories">Search categories...</string>
    <string name="edit_name">Edit name</string>
    <string name="no_parent">(No parent)</string>
    <string name="category_deleted">Category has been deleted</string>
    <string name="pick_a_category">Pick a category</string>
    <string name="search_items">Search items...</string>
    <string name="pick_an_item">Pick an item</string>
    <string name="search_globally">Search globally...</string>
    <string name="new_item">New Item</string>
    <string name="no_category">(No category)</string>
    <string name="item_deleted">Item has been deleted</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="remove_from_favourites">Remove from Favourites</string>
    <string name="export_barcodes">Export barcodes</string>
    <string name="select_all">Select all</string>
    <string name="log_out">Log out</string>
    <string name="no_item">(No item)</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="scan_barcode_activity_title">Scan barcode</string>
    <string name="barcode_invalid">Invalid barcode</string>
    <string name="barcode_item_not_found">Item not found</string>
    <string name="name">Name:</string>
    <string name="edit">Edit</string>
    <string name="parent">Parent:</string>
    <string name="open">Open</string>
    <string name="category">Category:</string>
    <string name="barcode">Barcode</string>
    <string name="create_item">Create Item</string>
</resources>