<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/white"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export_barcode"
        android:icon="@drawable/ic_barcode"
        android:title="@string/export_barcodes"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_star_filled"
        android:title="@string/add_to_favourites"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_unfavourite"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/remove_from_favourites"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_log_out"
        android:title="@string/log_out"
        android:visible="false"
        app:showAsAction="never" />
</menu>